# android-filemanager2

./: .gitignore  Jenkinsfile  README.md  build.gradle  gradle.properties  keystore.jks  settings.gradle
app/: CMakeLists.txt  build.gradle  fabric.properties  google-services.json  proguard-rules.pro
app/schemas/com.jakebarnby.filemanager.data.FileDatabase/: 1.json
app/src/androidTest/java/com/jakebarnby/filemanager/: ExampleInstrumentedTest.java  LocalTest.java  Util.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jakebarnby/filemanager/core/: BasePresenter.kt  GlideAppModule.kt  (+1 more)
app/src/main/jni/: io-lib.c
app/src/main/res/anim/: breadcrumb_overshoot_z.xml  breadcrumb_shrink.xml  button_bounce.xml  splash_logo_bounce.xml
app/src/main/res/drawable/: circle_white.xml  ic_file.xml  ic_folder_flat.xml  ic_folder_round.xml
app/src/main/res/layout/: activity_source.xml  activity_splash.xml  activity_tutorial.xml  dialog_create_folder.xml  dialog_properties.xml  dialog_rename.xml  dialog_search_results.xml  dialog_settings.xml  dialog_sort_by.xml  dialog_source_logout.xml  dialog_source_usage.xml  dialog_sourcelogin.xml  fragment_source.xml  fragment_tutorialpage.xml  item_single_file_grid.xml  item_single_file_list.xml  view_breadcrumb.xml  view_file_detailed_list.xml  view_file_grid.xml  view_file_list.xml  view_logout_list.xml  view_searchresult_list.xml  view_source_usage_list.xml  view_text_list.xml  view_usage_list.xml
app/src/main/res/menu/: menu_file_actions.xml  menu_source.xml
app/src/main/res/raw/: msal_config.json
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: file_paths.xml  remote_config_defaults.xml  searchable.xml
app/src/test/java/com/jakebarnby/filemanager/: ExampleUnitTest.java
(+307 files in other folders)
